2002-02-28  Mikael Hallendal  <micke@codefactory.se>

	* src/yelp-window.c:
	- #72636 fixed.
	- added GtkItemFactory to priv-struct.
	- added a Go-menu with the actions from the toolbar in it.
	- removed accelerators from toolbar items.
	- renamed some functions that made it easier to add the Go-menu.
	
2002-02-28  Sandeep V Honde <sandeep.honde@wipro.com>

	* src/yelp-main.c :
	- Basic support for Session Management.
	(yelp_save_session): added/impl.
	(yelp_client_die)  : added/impl.  

2002-02-28  Mikael Hallendal  <micke@codefactory.se>

	* src/yelp-view-index.c:
	(yelp_view_index_new): Added "Search for:" label in fron of the
	  search entry. Fixes #72643

	* src/yelp-window.c:
	(yw_create_toolbar): 
	- Update string, fixes #72634
	- Update string, fixes #72635

	* src/yelp-view-toc.c:
	(yelp_view_toc_man_1): Update string, fixes #72638
	(yelp_view_toc_start): Update string, fixes #72632

2002-02-25  Mikael Hallendal  <micke@codefactory.se>

	* src/yelp-view-index.c:
	(yvi_index_term_add): added/impl.
	(yvi_setup_index_view): added/impl.
	(yelp_view_index_new): call yvi_setup_index_view.

	* src/yelp-scrollkeeper.c: removed some debug printouts.

	* src/yelp-window.c:
	(yelp_window_new): added index-list to arguments.

	* src/yelp-view-index.c: started to fix (was a copy&paste from
	  yelp-view-content.

	* src/yelp-section.h: added YELP_SECTION_INDEX to YelpSectionType.

	* src/yelp-section.c: include string.h, fixes compile warning.

	* src/yelp-scrollkeeper.c:
	- Basic support for ScrollKeeper index added
	- use g_ascii_strcasecmp instead of depricated g_strcasecmp.
	  Thanks to the wipro guys for notifying.
	(ys_parse_index): added/impl.
	(ys_parse_index_file): added/impl.
	(ys_parse_index_item): added/impl.
	(yelp_scrollkeeper_init): 
	- added GList **index to arguments.

	* src/yelp-main.c:
	(yelp_main_open_new_window): use g_error
	(yelp_main_start): same.

	* src/yelp-history.c: include string.h, fixes compile warning.
