@@ -520,19 +520,20 @@ yw_go_index_cb (gpointer data, guint section, GtkWidget *widget)
 static void
 yw_about_cb (gpointer data, guint section, GtkWidget *widget)
 {
-	GtkWidget *about;
+	GtkWidget   *about;
 	const gchar *authors[] = { 
 		"Mikael Hallendal <micke@codefactory.se>",
 		"Alexander Larsson <alexl@redhat.com>",
 		NULL
 	};
+	gchar       *translator_credits = _("translator_credits");
 	
 	about = gnome_about_new (PACKAGE, VERSION,
 				 "(C) 2001-2002 Mikael Hallendal <micke@codefactory.se>",
 				 _("Help Browser for GNOME 2.0"),
 				 authors,
 				 NULL,
-				 NULL,
+				 strcmp (translator_credits, "translator_credits") != 0 ? translator_credits : NULL,
 				 NULL);
 
 	gtk_widget_show (about);
